# KOD

./: Button  Button.cpp  Button.hpp  CMakeLists.txt  Cestica  Cestica.cpp  Cestica.hpp  Cestice  CesticeSimulacija  CesticeSimulacija.cpp  CesticeSimulacija.hpp  MainMenu  MainMenu.cpp  MainMenu.hpp  Solver.hpp  State  State.cpp  State.hpp  colors.txt  main  main.cpp  mainold.cpp  positions.txt
include/SFML/: Graphics.hpp
